chore: revert to version `v0`
